--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html> 
 <html>
+
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="widh=device-width, initial-scale=1.0">
     <title>alurabooks</title>
     <link rel="stylesheet" href="reset.css">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <header class="cabeçalho">
-            <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="img/logo.svg" alt="logo da alurabooks">
-            <a href="#"><img src="img/favoritos.svg"></a>
-            <a href="#"><img src="img/compras.svg"></a>
-            <a href="#"><img src="img/usuarios.svg"></a>
+        <header class="cabecalho">
+          <div class="container">
+            <img src="img/Logo.svg" alt="Logo da Alurabooks">
+            <div class="container">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
+                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"</a>
+            </div>
+        </header>
     </body>
+
 </html>
