--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <body>
         <header class="cabecalho">
           <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
             <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+               <li class="lista-menu__titulo"></li>
+               <li class="lista-menu__item">
+                   <a href="#" class="lista-menu__link">categorias</a>
+               </li>
+               <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Programação</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">front-end</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">infraestrutura</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">business</a>
+      </li>
+      <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">design & UX</a>
+    </li>
+
+
+        </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
           </div>
           <div class="container">
