--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <body>
         <header class="cabecalho">
+            <span class="cabeçalho__menu-hanburguer"></span>
+            <img src="img/logo.svg" alt="logo da alurabooks">
           <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu">
