--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         <a href="#" class="lista-menu__link">design & UX</a>
     </li>
 
-
         </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
           </div>
@@ -52,6 +51,11 @@
                 <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
             </div>
         </header>
+         <section class="banner">
+            <h2 class="banner__titulo">ja sabe por onde começar?</h2>
+            <p class="banner__texto"></p>
+            <input type="search" class="banner__pesquisa" placeholder="qual será sua próxima leitura?">
+         </section>
     </body>
 
 </html>
