--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
     <section class="conteudo-principa">
         <h2 class="titulo-principal">meus objetivos do anos <span>_</span></h2>
         <div class="botoes">
-            <button class="botao">curso do Alura</button>
+            <button class="botao ativo">curso do Alura</button>
             <button class="botao">criar projetos em javacript</button>
             <button class="botao">criar um portfolio</button>
             <button class="botao">atualizar meu curriculo</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar 6 projeto em Javas</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+        </div>
+      </div>  
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
