--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <section class="conteudo-principa">
         <h2 class="titulo-principal">meus objetivos do anos <span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
             <button class="botao ativo">curso do Alura</button>
             <button class="botao">criar projetos em javacript</button>
@@ -16,15 +17,28 @@
             <button class="botao">atualizar meu curriculo</button>
         </div>
         <div class="abas-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
                 <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 6 projeto em Javas</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">Criar 6 projeto em Javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
         </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+            <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+            <div class="contador"></div>
+    </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da alura</h3>
+        <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+        <div class="contador"></div>
+    </div>
       </div>  
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
