--- a/index.html
+++ b/index.html
@@ -1,45 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Gerador de senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section class="conteudo-principa">
-        <h2 class="titulo-principal">meus objetivos do anos <span>_</span></h2>
-        <div class="conteudo">
-        <div class="botoes">
-            <button class="botao ativo">curso do Alura</button>
-            <button class="botao">criar projetos em javacript</button>
-            <button class="botao">criar um portfolio</button>
-            <button class="botao">atualizar meu curriculo</button>
-        </div>
-        <div class="abas-textos">
-            <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 6 projeto em Javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-            <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
-            <div class="contador"></div>
-    </div>
-    <div class="aba-conteudo">
-        <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da alura</h3>
-        <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
-        <div class="contador"></div>
-    </div>
-      </div>  
-    </div>
-    </section>
-    <script src="main.js"></script>
+    <div class="conteudo-titulo">
+    <img src="unlock.svg" alt="cedeado fechado">
+    <h2 class="titulo-principal">Gerdor de senha</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente ums senha aleatória e segura</h3>
+  </div>
+  <div class="conteudo-senha">
+    <label for="senha">Senha</label>
+    <input name="senha" type="text" id="campo-senha">
+  </div>
 </body>
+
 </html>
