--- a/index.html
+++ b/index.html
@@ -33,22 +33,35 @@
       <div class="parametro-senha">
          <h4 class="parametro-senha__titulo">Caracteristica da senha</h4>
         <div class="parametro-senha-checkbox">
-          <input name="maiusculo" type="checkbox">
+          <input name="maiusculo" type="checkbox" class="checkbox" checked>
           <label for="maiusculo">Letras  maiúsculas</label>
       </div>
       <div class="parametro-senha-checkbox">
-        
+        <input name="maiusculo" type="checkbox" class="checkbox">
+        <label for="minusculo">minúsculas</label>
       </div>
-
-          <input name="maiusculo" type="checkbox">
-          <label for="minusculo">minúsculas</label>
+      <div class="parametro-senha-checkbox">
+           <input name="nemero" type="checkbox" class="checkbox">
+           <label for="numero">Números</label>
+      </div>
+      <div class="parametro-senha-checkbox">
+         <input name="simbolo" type="checkbox" class="checkbox">
+         <label for="simbolo"></label>
+      </div>
         </div>
         <div class="parametro-senha">
           <h4 class="parametro-senha__titulo">Força da senha</h4>
+          <div class="barra"></div>
+          <div class="forca forte"></div>
+          <div class="parametro-senha-textos">
+              <p>fraca</p>
+              <p>média</p>
+              <p>forte</p>
+             </div> 
         </div>
       </div>
-    </div>
+    </div> 
   </section>
+    <script src="main.js"></script>
 </body>
-
 </html>
