--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="" class="style.css">
-    <title>Você decide o futuro da IA</title>
+    <title>Redes sociais </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
-        <div class="caixa-perguntas"></div>
-        <div class="caixa-alternativas"></div>
-        <div class="caixa-resultados">
-            <p class="texto-resultado"></p>
-        </div>
-    </div>
-    <script src="script.js"></script>
+     <header>
+        <h1>Relatório das redes sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
+     </header>
+     <main class="graficos-section">
+         <section id="graficos-container"
+         class="graficos-container">
+            <!--crie gráficos aqui-->
+        </section>
+     </main>
+     <footer>
+        <p>Desenvolvido por ana</p>
+     </footer>
 </body>
 </html>
